--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Home') %>
 
 
-<h1>Добро пожаловать</h1>
+<h1>Добро пожаловать <%= session[:UserName] %></h1>
 <p>
 тут ссылки на действия
 </p>
