--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -20,7 +20,8 @@
                   Admin
                 <%else%>
                   User
-                <%end%></td>
+                <%end%>
+          </td>
         </tr>
       <%end%>
     </tbody>
