--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -8,19 +8,17 @@
       <tr>
         <th>User Name</th>
         <th>User Password</th>
+        <th>User Centr Name</th>
         <th>User Type</th>
       </tr>
     </thead>
     <tbody>
-      <% @user.each do |usr|%>
+      <% @hash.each do |usrs|%>
         <tr>
-          <td><%= usr.user_name %></td>
-          <td><%= usr.user_password %></td>
-          <td><% if usr.is_admin == true %>
-                  Admin
-                <%else%>
-                  User
-                <%end%>
+          <td><%= usrs[:usr_name] %></td>
+          <td><%= usrs[:usr_password] %></td>
+          <td><%= usrs[:usr_centr_name] %></td>
+          <td><%= usrs[:usr_type] %>
           </td>
         </tr>
       <%end%>
