--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -2,17 +2,16 @@
 
 <h1>Редактирование пользователя</h1>
 <p>
-  <% @edit_user.each do |usrs| %>
-  <%= form_tag(users_path, {name: 'user_edit_form', id: 'user_edit_form', method: :post}) do %>
+    <%= form_tag(user_path(id: @edit_user[:id]), {name: 'user_edit_form', id: 'user_edit_form', method: :PUT}) do %>
 
     <p><%= label_tag(:name, "Введите имя полльзователя") %><br>
-      <%= text_field_tag(:name, value = usrs[:name]) %></p>
+      <%= text_field_tag(:name, @edit_user[:name]) %></p>
 
     <p><%= label_tag(:password, "Введите пароль") %><br>
-      <%= password_field_tag(:password, value = usrs[:password]) %></p>
+      <%= password_field_tag(:password, @edit_user[:password]) %></p>
 
     <p><%= label_tag(:confirm_password, "Повторите пароль") %><br>
-      <%= password_field_tag(:confirm_password) %></p>
+      <%= password_field_tag(:confirm_password, @edit_user[:password]) %></p>
 
     <p><%= select_tag(:center_id, options_from_collection_for_select(Center.all, :id, :name)) %></p>
 
