--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -3,18 +3,7 @@
 <h1>Редактирование пользователя</h1>
 <p>
     <%= form_tag(user_path(id: @edit_user[:id]), {name: 'user_edit_form', id: 'user_edit_form', method: :PUT}) do %>
-
-    <p><%= label_tag(:name, "Введите имя полльзователя") %><br>
-      <%= text_field_tag(:name, @edit_user[:name]) %></p>
-
-    <p><%= label_tag(:password, "Введите пароль") %><br>
-      <%= password_field_tag(:password, @edit_user[:password]) %></p>
-
-    <p><%= label_tag(:confirm_password, "Повторите пароль") %><br>
-      <%= password_field_tag(:confirm_password, @edit_user[:password]) %></p>
-
-    <p><%= select_tag(:center_id, options_for_select(@center_list)) %></p>
-
-    <p><%= submit_tag("Сохранить") %></p>
-<% end %>
+      <%= render "user" %>
+      <p><%= submit_tag("Сохранить") %></p>
+    <% end %>
 </p>
