--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -3,18 +3,7 @@
 <h1>Создание нового пользователя</h1>
 <p>
   <%= form_tag(users_path, {name: 'user_new_form', id: 'user_new_form', method: :post}) do %>
-
-    <p><%= label_tag(:name, "Введите имя полльзователя") %><br>
-      <%= text_field_tag(:name) %></p>
-
-    <p><%= label_tag(:password, "Введите пароль") %><br>
-      <%= password_field_tag(:password) %></p>
-
-    <p><%= label_tag(:confirm_password, "Повторите пароль") %><br>
-      <%= password_field_tag(:confirm_password) %></p>
-
-    <p><%= select_tag(:center_id, options_for_select(@center_list)) %></p>
-
+    <%= render "user" %>
     <p><%= submit_tag("Создать") %></p>
-<% end %>
+  <% end %>
 </p>
