--- a/app/views/user/_user.html.erb
+++ b/app/views/user/_user.html.erb
@@ -1,10 +1,10 @@
 <p><%= label_tag(:name, "Введите имя полльзователя") %><br>
-  <%= text_field_tag(:name) %></p>
+  <%= text_field_tag(:name, @edit_user[:name]) %></p>
 
 <p><%= label_tag(:password, "Введите пароль") %><br>
-  <%= password_field_tag(:password) %></p>
+  <%= password_field_tag(:password, @edit_user[:password]) %></p>
 
 <p><%= label_tag(:confirm_password, "Повторите пароль") %><br>
-  <%= password_field_tag(:confirm_password) %></p>
+  <%= password_field_tag(:confirm_password, @edit_user[:password]) %></p>
 
 <p><%= select_tag(:center_id, options_for_select(@center_list)) %></p>
