--- a/app/views/user/_user.html.erb
+++ b/app/views/user/_user.html.erb
@@ -7,4 +7,4 @@
 <p><%= label_tag(:confirm_password, "Повторите пароль") %><br>
   <%= password_field_tag(:confirm_password, @edit_user[:password]) %></p>
 
-<p><%= select_tag(:center_id, options_for_select(@center_list)) %></p>
+<p><%= select_tag(:center_id, options_for_select(@center_list, @edit_user[:centr_id])) %></p>
