--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -6,6 +6,6 @@
 
       <%= render "user" %>
 
-    <p><%= submit_tag("Сохранить") %></p>
+    <%= submit_tag("Сохранить") %></p>
     <% end %>
 </p>
