--- a/app/views/user/_user.html.erb
+++ b/app/views/user/_user.html.erb
@@ -9,4 +9,4 @@
 
 <p><%= select_tag(:center_id, options_for_select(@center_list, @edit_user[:centr_id])) %></p>
 
-<p><input type="button" value="Отмена" onclick="<% redirect_to controller: :user, action: :index %>">
+<p><%= button_tag t('buttons.cancel'), type: "submit", name: "cancel", value: true %>
