создаем вьюшки для управления user

--- a/app/views/user/_user.html.erb
+++ b/app/views/user/_user.html.erb
@@ -9,4 +9,4 @@
 
 <p><%= select_tag(:center_id, options_for_select(@center_list, @edit_user[:centr_id])) %></p>
 
-<p><%= button_tag ('Отмена'), type: "submit", name: "cancel", value: true %>
+<p><a href='http://127.0.0.1:3000/user/index'><button>Отмена</button></a>
