--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 <p>
     <%= form_tag(user_path(id: @edit_user[:id]), {name: 'user_edit_form', id: 'user_edit_form', method: :put}) do %>
       <%= render "user" %>
-    <p><a href='http://127.0.0.1:3000/users/index'><button>Отмена</button></a>
+    <p><a href='/users/index'><button>Отмена</button></a>
     <%= submit_tag("Сохранить") %></p>
     <% end %>
 </p>
